--- a/index.html
+++ b/index.html
@@ -2,7 +2,5 @@
 <html>
     <head>
         <title>Meu site</title>
-        <meta charset="utf-8">
+        <meta charset="utf-8"
     </head>
-    <body>
-</html>
