--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Meu site</title>
-        <meta charset="utf-8"
-    </head>
+<!doctype html>
+<html lang="pt-br">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Nossa História</title>
+  <meta name="description" content="Resumo curto do seu site/página.">
+  <link rel="canonical" href="https://pedrinn220.github.io/">
+</head>
+<body>
+  <!-- seu conteúdo -->
+</body>
+</html>
